Add repository-scoped workflow execution (#102)
* Add repository-scoped workflow execution

* Fix scoped runtime review blockers

* Harden repository-scoped workflow runtime

* Pass explicit global activation scope in ForgeIT

* Preserve workflow repository snapshots on lifecycle updates

* Keep scoped activation waves in one frame

* chore(agent): finalize scoped runtime cleanup

* fix(agent): reevaluate parent inputs after reentry

* fix(agent): stop repeated closed propagation

* test(agent): cover scoped execution matrix

* fix(agent): terminalize work after workflow failure

* fix(agent): narrow cancelled callback no-op

---------

Co-authored-by: vladvinskevitch <vvinskevitch@gmail.com>